--- a/popup.html
+++ b/popup.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Getting Started Extension's Popup</title>
+    <title>Hue for Chrome</title>
   </head>
   <body>
     <div id="app"></div>
